--- a/web_app/templates/user_orders.html
+++ b/web_app/templates/user_orders.html
@@ -10,7 +10,8 @@
 
     {% if orders|length == 0 %}
         <p class="lead" >Oh, you have not yet placed an order. Please visit the
-            <a href="/products">products page</a>!
+            <a href="/products">products page</a> or
+            <a href="/books">books page</a> 
         </p>
     {% else %}
         <div class="table-responsive">
@@ -20,6 +21,7 @@
                         <th scope="col">Order Id</th>
                         <th scope="col">User Email</th>
                         <th scope="col">Product ID</th>
+                        <th scope="col">Product Type</th>
                         <th scope="col">Product Name</th>
                         <th scope="col">Product Price</th>
                         <th scope="col">Timestamp</th>
@@ -37,6 +39,9 @@
                         </td>
                         <td>
                             {{ order.product_id }}
+                        </td>
+                        <td>
+                            {{ order.product_type }}
                         </td>
                         <td>
                             {{ order.product_name }}
